<?xml version="1.0"?>
<package format="2">
  <name>omnivelma_nav_setup</name>
  <version>1.0.0</version>
  <description>The omnivelma_nav_setup package</description>

  <maintainer email="przemyslaw.szostak95@gmail.com">Przemyslaw Szostak</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>nav_msgs</depend>
  <depend>omnivelma_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>	
  <depend>tf2_geometry_msgs</depend>	

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
